--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Clark - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Salman Ahmed</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -27,7 +27,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">SALMAN</a>
+	      <a class="navbar-brand" href="https://thesophisticateddev.github.io/">SALMAN AHMED</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -40,7 +40,7 @@
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
+	          <!-- <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li> -->
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -60,7 +60,7 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Salman Ahmed</span></h1>
 			            <h2 class="mb-4">A Software Engineer</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="https://github.com/thesophisticateddev" class="btn btn-primary py-3 px-4">Github</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -102,21 +102,20 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		            <p>I am a software engineer with nearly two years of experience, specializing in Java, TypeScript, and Rust, with expertise in Spring Boot, Rust Actix, and NestJS for Node.js. I also have a strong preference for Svelte/SvelteKit and React for frontend development. My skillset includes advanced design patterns (Domain Driven Design, Event Driven Model, TDD, CQRS), proficiency in databases (MySQL, PostgreSQL, MongoDB, Firebase), and experience with messaging systems (Kafka, Amazon SQS, RabbitMQ) to support complex architectures. I am enthusiastic about optimizing services for scalability, reliability, and performance and have hands-on experience with Docker, Kubernetes, and cloud providers like AWS, GCP, and Digital Ocean.  </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Clark Thompson</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>January 01, 1987</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>clarkthomp@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
+		            	<li class="d-flex"><span>Name:</span> <span>Salman Ahmed</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Max-Planck Ring 4, Ilmenau, Germany</span></li>
+		            	<li class="d-flex"><span>Zip code:</span> <span>98693</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>salman.sc829@gmail.com</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>+49 17676 583 546</span></li>
 		            </ul>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="120">0</span>
+	                <span class="number" data-number="8">0</span>
 	                <span>Project complete</span>
                 </p>
                 <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
@@ -133,7 +132,6 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
           </div>
         </div>
     		<div class="row">
@@ -526,12 +524,12 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Website</h3>
-	            <p><a href="#">yoursite.com</a></p>
+	            <p><a href="https://thesophisticateddev.github.io/">thesophisticateddev.github.io</a></p>
 	          </div>
           </div>
         </div>
 
-        <div class="row no-gutters block-9">
+<!--         <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
             <form action="#" class="bg-light p-4 p-md-5 contact-form">
               <div class="form-group">
@@ -554,19 +552,19 @@
           </div>
 
           <div class="col-md-6 d-flex">
-          	<!-- <div class="img" style="background-image: url(images/about.jpg);"></div> -->
-          	<h1 class="big big-2">Do I look like a good fit for your role?</h1>
-          </div>
-        </div>
+          	<div class="img" style="background-image: url(images/about.jpg);"></div> -->
+          	<!-- <h1 class="big big-2">Do I look like a good fit for your role?</h1> -->
+          <!-- </div> --> -->
+        <!-- </div> -->
       </div>
     </section>
 		
 
     <footer class="ftco-footer ftco-section">
       <div class="container">
-        <div class="row mb-5">
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
+        <!-- <div class="row mb-5"> -->
+          <!-- <div class="col-md"> -->
+<!--             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
@@ -575,8 +573,8 @@
                 <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
-          </div>
-          <div class="col-md">
+          </div> -->
+<!--           <div class="col-md">
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
@@ -587,8 +585,8 @@
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
               </ul>
             </div>
-          </div>
-          <div class="col-md">
+          </div> -->
+      <!--     <div class="col-md">
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Services</h2>
               <ul class="list-unstyled">
@@ -599,8 +597,8 @@
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li>
               </ul>
             </div>
-          </div>
-          <div class="col-md">
+          </div> -->
+          <!-- <div class="col-md">
             <div class="ftco-footer-widget mb-4">
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
@@ -611,14 +609,11 @@
 	              </ul>
 	            </div>
             </div>
-          </div>
-        </div>
+          </div> -->
+        <!-- </div> -->
         <div class="row">
           <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+          	<a href="#home-section"class="btn btn-primary py-2 px-2">To the Top</a>
           </div>
         </div>
       </div>
