--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png); background-size: contain;">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -60,7 +60,7 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Salman Ahmed</span></h1>
 			            <h2 class="mb-4">A Software Engineer</h2>
-			            <p><a href="https://github.com/thesophisticateddev" class="btn btn-primary py-3 px-4">Github</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="https://github.com/thesophisticateddev" class="btn btn-primary py-3 px-4">Github</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -93,7 +93,7 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/bg_1.png);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/framework.jpg); background-size:contain;">
 	    				</div>
     				</div>
     			</div>
